# osc_rpi

./: .gitignore  FIX_SUMMARY.md  FREQUENCY_TEST_README.md  FREQUENCY_TEST_SUMMARY.md  GPIO23_DEBUG_GUIDE.md  GPIO_README.md  HIGH_FREQ_TEST_README.md  OPEN_QUESTIONS.md  PRD.md  PROJECT_STRUCTURE.md  QUICK_TEST_GUIDE.md  README_APP.md  RpiOSC_prompts.md  SPEC.md  TEST_SUMMARY.md  TEST_TRACKING.md  TEST_WIRING.md  compile_freq_c.sh  compile_freq_cpp.sh  compile_latency_test.sh  compile_multi_channel_test.sh  compile_stress_test.sh  digital_oscilloscope.py  fix_gpio_perms.sh  freq_measure_c.c  freq_measure_cpp  freq_measure_cpp.cpp  gpio_blink.py  gpio_chip_test.py  gpio_debug.py  gpio_freq_dma.py  gpio_freq_optimized.py  gpio_frequency_test.py  gpio_frequency_test_sim.py  gpio_pins.py  gpio_status.py  gpio_test.py  high_freq_stress_test  high_freq_stress_test.cpp  install_gpio_ubuntu.sh  (+15 more)
config/: osc_config.yaml  trigger_conditions.yaml
docs/: auto_start.md  启动方法.md  触发方式.md
src/rpiosc/: __init__.py  app.py  config_loader.py  controller.py  gpio_driver.py  metrics.py  models.py  sampling_planner.py  storage.py  timebase.py  trigger_dsl.py  trigger_engine.py  ui_controls.py
src/rpiosc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
